# powerful_arm_dc_InterfaceFPGA_v4

./: 0_instruções_para_compila.txt  CMakeLists.txt  README.md
inc/: bitdoglab_pins.h  braco_config.h  fpga_comms.h  oled_context.h  oled_display.h  perifericos.h  ssd1306_font.h  ssd1306_text.h  tarefas.h
src/: CMakeLists.txt  aht10.c  braco_config.c  fpga_comms.c  main.c  oled_context.c  oled_display.c  perifericos.c  ssd1306_text.c  tarefas.c  vl53l0x.c
